# AzureAgent

./: README_Streamlit.md  agent_service.py  appinsights_opentelemetry.py  pyproject.toml  requirements_streamlit.txt  sk_main_agent.py  sk_main_agent2.py  streamlit_app.py
